# FIN_BOT

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  pyproject.toml  render.yaml
.github/workflows/: ci.yml
docs/: architecture.md  deploy.md  tutorial-local.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: admin.ts  ai.ts  auth.ts  client.ts  user.ts
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/layouts/: AdminLayout.tsx  AppLayout.tsx  DashboardShell.tsx
frontend/src/lib/: format.ts
migrations/: env.py
migrations/versions/: 20260710_01_dashboard_foundation.py  20260710_02_user_scoped_names.py  20260710_03_web_identity.py  20260712_04_financial_workflows.py
scripts/: bootstrap_database.py  create_users.py  dev_tunnel.py  run_financial_jobs.py  set_telegram_webhook.py
src/finbot/: __init__.py
tests/: test_account_commands_and_messages.py  test_api_errors_and_logging.py  test_auth_and_dashboard_api.py  test_composite_parser.py  test_deduplication.py  test_financial_queries.py  test_google_sheets_client.py  test_groq_integration.py  test_openai_parser.py  test_parser_factory.py  test_project_structure.py  test_rule_based_parser.py  test_sheets_dashboard.py  test_sheets_layout.py  test_telegram_client.py  test_telegram_idempotency.py  test_telegram_webhook.py  test_transaction_entry_service.py  test_transaction_repository.py  test_transaction_validation.py
(+93 files in other folders)
